Добавлены подзаголовки к хедерам

--- a/templates/app/about.html
+++ b/templates/app/about.html
@@ -8,6 +8,8 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <h1>О нас</h1>
+                        <hr class="small">
+                        <span class="subheading">Вот так и живем</span>
                     </div>
                 </div>
             </div>
