--- a/templates/app/services.html
+++ b/templates/app/services.html
@@ -8,6 +8,8 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <h1>Услуги</h1>
+                        <hr class="small">
+                        <span class="subheading">Все, в чем вы нуждаетесь</span>
                     </div>
                 </div>
             </div>
