--- a/templates/app/contact.html
+++ b/templates/app/contact.html
@@ -9,6 +9,8 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <h1>Контакты</h1>
+                        <hr class="small">
+                        <span class="subheading">Как с нами связаться</span>
                     </div>
                 </div>
             </div>
