--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -25,11 +25,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <p>{{ post.content }}</p>
-                    <p>
-                    {% load disqus_tags %}
-                    {% disqus_dev %}
-                    {% disqus_show_comments %}
-                    </p>
+                  <!--  <p>
+                  а-ля дискас
+                    </p>-->
                 </div>
             </div>
         </div>
