--- a/templates/app/post_list.html
+++ b/templates/app/post_list.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>Блог Елены Мельник</h1>
+                        <h1>Elena Melnik's blog Блог Елены</h1>
                         <hr class="small">
                         <span class="subheading">Юридические услуги</span>
                     </div>
