--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -33,4 +33,9 @@
         </div>
     </article>
     <hr>
+    <p>
+    {% load disqus_tags %}
+    {% disqus_dev %}
+    {% disqus_show_comments %}
+    </p>
 {% endblock %}
