Добавлено в shortname в html код

--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -36,6 +36,6 @@
     <p>
     {% load disqus_tags %}
     {% disqus_dev %}
-    {% disqus_show_comments %}
+    {% disqus_show_comments "stamigosdjangohostname"%}
     </p>
 {% endblock %}
