--- a/templates/app/category.html
+++ b/templates/app/category.html
@@ -6,6 +6,6 @@
     <h2>Статьи в категории - {{ category.name }}:</h2>
     	{% for post in posts %} # делаем цикличную выборку наших статей
             /* выводим список ссылок на статьи из выбранной категории */
-        	<p><a href="/blog/{{ post.id }}">{{ post.title }}</a></p>
+        	<p><a href="/{{ post.id }}">{{ post.title }}</a></p>
 {% endfor %}
 {% endblock content %}
