--- a/templates/app/tagpage.html
+++ b/templates/app/tagpage.html
@@ -4,8 +4,7 @@
 {% block content %}
     /* выводим наш выбранный тег */
     <h2>Статьи по тегу - {{ tag.name }}:</h2>
-    	{% for post in posts %} # делаем цикличную выборку наших статей
-            /* выводим список ссылок на статьи из выбранной категории */
-        	<p><a href="/blog/{{ post.id }}">{{ post.title }}</a></p>
+    	{% for post in posts %}
+        	<p><a href="/{{ post.id }}">{{ post.title }}</a></p>
     	{% endfor %}
 {% endblock content %}
