--- a/templates/app/category.html
+++ b/templates/app/category.html
@@ -1,11 +1,10 @@
-{% extends "base.html" %} // главный шаблон
+{% extends "base.html" %}
 
 {% block title %}Статьи в категории - {{ category.name }}{% endblock title %}
 {% block content %}
-    /* выводим нашу выбранную категорию */
+
     <h2>Статьи в категории - {{ category.name }}:</h2>
-    	{% for post in posts %} # делаем цикличную выборку наших статей
-            /* выводим список ссылок на статьи из выбранной категории */
+    	{% for post in posts %}
         	<p><a href="/{{ post.id }}">{{ post.title }}</a></p>
 {% endfor %}
 {% endblock content %}
