--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,11 @@
     </header>
 {% endblock %}
 
+<div class="container">
+{% block additional %}
+    Дополнительная зона
+{% endblock %}
+</div>
     <div class="container">
      {% block content %}Пустая страница{% endblock %}
     </div> <!-- container -->
