--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -23,8 +23,7 @@
                                         {{ post.category}}<h4>
 	<div class="tags">Теги:
 	{% for tag in post.tag.all %}
-		<h4><a href="tag/{{ tag }}">{{ tag }}</a></h4>
-		{% if not forloop.last %}, {% endif %}
+		<h4><a href="tag/{{ tag }}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}<h4>
 	{% endfor %}
 	</div>
 
