--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -24,7 +24,7 @@
 	<div class="tags">Теги:
 	{% for tag in post.tag.all %}
 		<h4><a href="tag/{{ tag }}">{{ tag }}{% if not forloop.last %}, {% endif %}
-	{% endfor %}<h4>
+	{% endfor %}</h4>
 	</div>
 
 {% endblock %}
