--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -19,12 +19,12 @@
 {% endblock %}
 
 {% block additional %}
-    <h4>Категория: <a href="category/{{ post.category }}">
-                                        {{ post.category}}<h4>
-	<div class="tags">Теги:
+    <p>Категория: <a href="category/{{ post.category }}">
+                                        {{ post.category}}<p>
+	<div>Теги:
 	{% for tag in post.tag.all %}
-		<h4><a href="tag/{{ tag }}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
-	{% endfor %}</h4>
+		<a href="tag/{{ tag }}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
+	{% endfor %}
 	</div>
 
 {% endblock %}
