редактирование шаблонов тегов и категорий

--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -21,11 +21,14 @@
 {% block additional %}
     <p>Категория: <a href="category/{{ post.category }}">
                                         {{ post.category}}<p>
-	<div>Теги:
-	{% for tag in post.tag.all %}
-		<a href="tag/{{ tag }}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
+    <p>Теги:</p>
+    <ul id="tag-cloud">
+    	{% for tag in post.tag.all %}
+		<a href="tag/{{ tag }}">{{ tag }}</a>
+        {% if not forloop.last %}, {% endif %}
 	{% endfor %}
-	</div>
+    </ul>
+
 
 {% endblock %}
 
