редактирование шаблонов тегов и категорий

--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block header %}
+    <link href="{{ STATIC_URL }}css/bootstrap-tag-cloud.css" rel="stylesheet">
+    <script src="{{ STATIC_URL }}js/bootstrap-tag-cloud.js"></script>
         <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
     <header class="intro-header" style="background-image: url('{{ STATIC_URL }}img/post-bg.jpg')">
