редактирование шаблонов тегов и категорий

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
     <!-- Custom CSS -->
     <link href="{{ STATIC_URL }}css/clean-blog.min.css" rel="stylesheet">
 
+    <link href="{{ STATIC_URL }}css/bootstrap-tag-cloud.css" rel="stylesheet">
+
     <!-- Custom Fonts -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -119,6 +121,8 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{{ STATIC_URL }}js/clean-blog.min.js"></script>
+
+    <script src="{{ STATIC_URL }}js/bootstrap-tag-cloud.js"></script>
 
 </body>
 
