редактирование шаблонов тегов и категорий

--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -19,14 +19,13 @@
 {% endblock %}
 
 {% block additional %}
-    <p>Категория: <a href="category/{{ post.category }}">
-                                        {{ post.category}}<p>
+
     <ul id="tag-cloud">
+    <li>Категория: <a href="category/{{ post.category }}">{{ post.category}}</a></li>
     <li>Теги:</li>
     	{% for tag in post.tag.all %}
              <li class="tag-cloud tag-cloud-success"><a href="tag/{{ tag }}">{{ tag }}</a></li>
-        {% if not forloop.last %}, {% endif %}
-	{% endfor %}
+	    {% endfor %}
     </ul>
 
 
