редактирование шаблонов тегов и категорий

--- a/BBCard/static/css/bootstrap-tag-cloud.css
+++ b/BBCard/static/css/bootstrap-tag-cloud.css
@@ -36,7 +36,7 @@
     background-color: #3A87AD;
 }
 .tag-cloud.tag-cloud-success {
-    background-color: #468847;
+    background-color: #F5F5F5;
 }
 .tag-cloud.tag-cloud-warning {
     background-color: #F89406;
