редактирование шаблонов тегов и категорий

--- a/BBCard/static/css/bootstrap-tag-cloud.css
+++ b/BBCard/static/css/bootstrap-tag-cloud.css
@@ -22,7 +22,7 @@
     color: #000000;
     content: " ×";
     font-size: 20px;
-    font-weight: bold;
+    font-weight: normal;
     line-height: 16px;
     opacity: 0.2;
 	position: relative;
