--- a/BBCard/static/css/clean-blog.css
+++ b/BBCard/static/css/clean-blog.css
@@ -5,7 +5,7 @@
  */
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: /*'Lora', 'Times New Roman',*/ serif;
   font-size: 20px;
   color: #404040;
 }
@@ -52,7 +52,7 @@ hr.small {
   left: 0;
   width: 100%;
   z-index: 3;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: /*'Open Sans', 'Helvetica Neue', Helvetica, Arial,*/ sans-serif;
 }
 .navbar-custom .navbar-brand {
   font-weight: 800;
@@ -188,13 +188,13 @@ hr.small {
   display: block;
 }
 .intro-header .post-heading .subheading {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: /*'Open Sans', 'Helvetica Neue', Helvetica, Arial,*/ sans-serif;
   font-size: 24px;
   margin: 10px 0 30px;
   font-weight: 600;
 }
 .intro-header .post-heading .meta {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: /*'Lora', 'Times New Roman',*/ serif;
   font-style: italic;
   font-weight: 300;
   font-size: 20px;
@@ -326,7 +326,7 @@ form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
 }
 .btn {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: /*'Open Sans', 'Helvetica Neue', Helvetica, Arial,*/ sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
@@ -349,7 +349,7 @@ form .row:first-child .floating-label-form-group {
 }
 .pager li > a,
 .pager li > span {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: /*'Open Sans', 'Helvetica Neue', Helvetica, Arial,*/ sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
