редактирование шаблонов тегов и категорий

--- a/BBCard/static/css/bootstrap-tag-cloud.css
+++ b/BBCard/static/css/bootstrap-tag-cloud.css
@@ -33,7 +33,7 @@
 	/* Colors */
 
 .tag-cloud.tag-cloud-info {
-    background-color: #3A87AD;
+    background-color: #D3D3D3;
 }
 .tag-cloud.tag-cloud-success {
     background-color: #F5F5F5;
