--- a/BBCard/static/css/bootstrap.css
+++ b/BBCard/static/css/bootstrap.css
@@ -261,7 +261,7 @@ th {
     border: 1px solid #ddd !important;
   }
 }
-@font-face {
+/*@font-face {
   font-family: 'Glyphicons Halflings';
 
   src: url('../fonts/glyphicons-halflings-regular.eot');
@@ -878,7 +878,7 @@ th {
 }
 .glyphicon-tree-deciduous:before {
   content: "\e200";
-}
+}*/
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
