--- a/BBCard/static/css/bootstrap.css
+++ b/BBCard/static/css/bootstrap.css
@@ -6,13 +6,13 @@
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
-  font-family: sans-serif;
+  font-family: 'sans-serif';
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'sans-serif';
 }
 article,
 aside,
@@ -261,11 +261,11 @@ th {
     border: 1px solid #ddd !important;
   }
 }
-/*@font-face {
+@font-face {
   font-family: 'Glyphicons Halflings';
 
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('fonts/glyphicons-halflings-regular.eot');
+  src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('fonts/glyphicons-halflings-regular.woff') format('woff'), url('fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -878,7 +878,7 @@ th {
 }
 .glyphicon-tree-deciduous:before {
   content: "\e200";
-}*/
+}
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
