--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
 {% endblock %}
 
 
-    <div class="container">
+    <div class="container" style="font-family : sans-serif;">
      {% block content %}Пустая страница{% endblock %}
     </div> <!-- container -->
     <div class="container">
