--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
     <header class="intro-header" style="background-image: url('{{ STATIC_URL }}img/home-bg.jpg')">
-        <div class="container">
+        <div class="container" style="font-family : sans-serif;">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
@@ -105,7 +105,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container">
+        <div class="container" style="font-family : sans-serif;">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
