--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
     <div class="container" style="font-family : sans-serif;">
      {% block content %}Пустая страница{% endblock %}
     </div> <!-- container -->
-    <div class="container">
+    <div class="container" style="font-family : sans-serif;">
     {% block additional %}{% endblock %}
     </div>
 
