--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
     <div class="container" style="font-family : sans-serif;">
      {% block content %}Пустая страница{% endblock %}
     </div> <!-- container -->
-    <div class="container" style="font-family : sans-serif;">
+    <div class="container" style="font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;">
     {% block additional %}{% endblock %}
     </div>
 
@@ -105,7 +105,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container" style="font-family : sans-serif;">
+        <div class="container" style="font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;";">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
