--- a/BBCard/static/css/bootstrap-tag-cloud.css
+++ b/BBCard/static/css/bootstrap-tag-cloud.css
@@ -15,7 +15,7 @@
     line-height: 21px;
     margin: 2px 3px 2px 2px;
     padding: 1px 4px 2px;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    /*text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);*/
     vertical-align: baseline;
 }
 .tag-cloud:after {
@@ -33,7 +33,7 @@
 	/* Colors */
 
 .tag-cloud.tag-cloud-info {
-    background-color: #D3D3D3;
+    background-color: #F5F5F5;
 }
 .tag-cloud.tag-cloud-success {
     background-color: #F5F5F5;
