--- a/templates/app/post_list.html
+++ b/templates/app/post_list.html
@@ -26,11 +26,11 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="post-preview">
                    {% for post in object_list %}
-                    <h2 class="post-title"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-                    <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+                    <h2 class="post-title"style="font-family : sans-serif;"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+                    <h3 class="post-subtitle"style="font-family : sans-serif;">{{ post.subtitle }}</h3>
                     <p class="post-meta">Добавлено: <a href="{%  url 'contact' %}">Елена Мельник</a> {{ post.datetime }}</p>
                     {% empty %}
-                    <p>Нет постов</p>
+                    <p style="font-family : sans-serif;">Нет постов</p>
                     {% endfor %}
                 </div>
             </div>
