--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -21,7 +21,7 @@
 {% block content %}
     <!-- Post Content -->
     <article>
-        <div class="container">
+        <div class="container" style="font-family : sans-serif;">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <p>{{ post.content }}</p>
