--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -38,13 +38,13 @@
 
     <ul id="tag-cloud">
     <li>Категория:</li>
-    <li class="tag-cloud tag-cloud-success"><a href="{{ post.id }}/category/{{ post.category.slug }}">{{ post.category}}</a></li>
+    <li class="tag-cloud tag-cloud-success"><a href="/category/{{ ct_slug }}">{{ post.category}}</a></li>
     </ul>
 
     <ul id="tag-cloud">
     <li>Теги:</li>
     	{% for tag in post.tag.all %}
-             <li class="tag-cloud tag-cloud-success"><a href="{{ post.id }}/tag/{{ tag.slug }}">{{ tag }}</a></li>
+             <li class="tag-cloud tag-cloud-success"><a href="/tag/{{ tg_slug }}">{{ tag }}</a></li>
 	    {% endfor %}
     </ul>
 
