--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -38,7 +38,7 @@
 
     <ul id="tag-cloud">
     <li>Категория:</li>
-    <li class="tag-cloud tag-cloud-success"><a href="{{ post.get_absolute_url }}category{{ post.category.id }}">{{ post.category}}</a></li>
+    <li class="tag-cloud tag-cloud-success"><a href="{{ post.get_absolute_url }}category/{{ post.category.id }}">{{ post.category}}</a></li>
     </ul>
 
     <ul id="tag-cloud">
