--- a/templates/base.html
+++ b/templates/base.html
@@ -76,13 +76,13 @@
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
     <header class="intro-header" style="background-image: url('{{ STATIC_URL }}img/home-bg.jpg')">
-        <div class="container" style="font-family : sans-serif;">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>Блог Елены Мельник</h1>
+                        <h1 style="font-family: 'Monotype Corsiva', 'Apple Chancery', 'URW Chancery L', cursive">Блог Елены Мельник</h1>
                         <hr class="small">
-                        <span class="subheading">Юридические услуги</span>
+                        <span class="subheading" style="font-family: 'monotype corsiva';" >Юридические услуги</span>
                     </div>
                 </div>
             </div>
