--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'list' %}">Блог Елены Мельник</a>
+                <a class="navbar-brand" style="font-family: annabelle" href="{% url 'list' %}">Блог Елены Мельник</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,9 +80,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="font-family: 'Monotype Corsiva', 'Apple Chancery', 'URW Chancery L', cursive">Блог Елены Мельник</h1>
+                        <h1 style="font: 'monotypecorsiva">Блог Елены Мельник</h1>
                         <hr class="small">
-                        <span class="subheading" style="font-family: 'monotype corsiva';" >Юридические услуги</span>
+                        <span class="subheading" style="font: 'monotypecorsiva';" >Юридические услуги</span>
                     </div>
                 </div>
             </div>
