--- a/BBCard/static/css/bootstrap.css
+++ b/BBCard/static/css/bootstrap.css
@@ -6,13 +6,13 @@
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
-  font-family: 'sans-serif';
+  font-family: "Monotype Corsiva", "Apple Chancery", "URW Chancery L", cursive;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 body {
   margin: 0;
-  font-family: 'sans-serif';
+  font-family: "Monotype Corsiva", "Apple Chancery", "URW Chancery L", cursive;
 }
 article,
 aside,
