--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -23,7 +23,7 @@
     <article>
         <div class="container" style="font-family : sans-serif;">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="font-family: annabelle">
                     <p>{{ post.content }}</p>
                 </div>
             </div>
