--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -8,8 +8,8 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading">
-                        <h1>{{ post.title }}</h1>
-                        <h2 class="subheading">{{ post.subtitle }}</h2>
+                        <h1 style="font-family: annabelle">{{ post.title }}</h1>
+                        <h2 class="subheading" style="font-family: annabelle">{{ post.subtitle }}</h2>
                         <span class="meta">Добавлено: <a href="{% url 'contact' %}">Елена Мельник</a> {{ post.datetime }}</span>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
     <article>
         <div class="container" style="font-family : sans-serif;">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="font-family: annabelle">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <p>{{ post.content }}</p>
                 </div>
             </div>
