--- a/templates/app/post_list.html
+++ b/templates/app/post_list.html
@@ -10,9 +10,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="font-family: cassandra">Блог Елены Мельник</h1>
+                        <h1 style="font-family: annabelle">Блог Елены Мельник</h1>
                         <hr class="small">
-                        <span class="subheading" style="font-family: cassandra">Юридические услуги</span>
+                        <span class="subheading" style="font-family: annabelle">Юридические услуги</span>
                     </div>
                 </div>
             </div>
