--- a/templates/base.html
+++ b/templates/base.html
@@ -47,17 +47,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" style="font-family: annabelle" href="{% url 'list' %}">Блог Елены Мельник</a>
+                <a class="navbar-brand" style="font-family: annabelle" href="{% url 'about' %}">Блог Елены Мельник</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{% url 'news' %}">Новости</a>
+                        <a href="{% url 'about' %}">О нас</a>
                     </li>
                     <li>
-                        <a href="{% url 'about' %}">О нас</a>
+                        <a href="{% url 'news' %}">Новости</a>
                     </li>
                     <li>
                         <a href="{% url 'services' %}">Услуги</a>
