--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" style="font-family: annabelle" href="{% url 'about' %}">Блог Елены Мельник</a>
+                <a class="navbar-brand" style="font-family: annabelle" href="{% url 'news' %}">Блог Елены Мельник</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
