--- a/templates/app/category.html
+++ b/templates/app/category.html
@@ -5,6 +5,6 @@
 
     <h2>Статьи в категории - {{ category.name }}:</h2>
     	{% for post in posts %}
-        	<p><a href="/{{ post.id }}">{{ post.title }}</a></p>
+        	<p style="font-family : 'Georgia', Times New Roman, Times, serif;"><a href="/{{ post.id }}">{{ post.title }}</a></p>
 {% endfor %}
 {% endblock content %}
