--- a/templates/app/contact.html
+++ b/templates/app/contact.html
@@ -18,7 +18,7 @@
     </header>
 {% endblock %}
 {% block content %}
-    <div class="container">
+    <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif;">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p>Напишите мне и я отвечу вам на протяжении 24 часов</p>
