--- a/templates/app/services.html
+++ b/templates/app/services.html
@@ -19,7 +19,7 @@
 
 {% block content %}
     <!-- Main Content -->
-    <div class="container">
+    <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif;">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p>Какие-то услуги</p>
