--- a/templates/app/tagpage.html
+++ b/templates/app/tagpage.html
@@ -3,8 +3,8 @@
 {% block title %}Статьи по тегу - {{ tag.name }}{% endblock title %}
 {% block content %}
 
-    <h2>Статьи по тегу - {{ tag.name }}:</h2>
+    <h2 style="font-family : 'Georgia', Times New Roman, Times, serif;">Статьи по тегу - {{ tag.name }}:</h2>
     	{% for post in posts %}
-        	<p><a href="/{{ post.id }}">{{ post.title }}</a></p>
+        	<p style="font-family : 'Georgia', Times New Roman, Times, serif;"><a href="/{{ post.id }}">{{ post.title }}</a></p>
     	{% endfor %}
 {% endblock content %}
