Изменено имя владельца

--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -10,7 +10,7 @@
                     <div class="post-heading">
                         <h1 style="font-family: annabelle">{{ post.title }}</h1>
                         <h2 class="subheading" style="font-family: annabelle">{{ post.subtitle }}</h2>
-                        <span class="meta">Добавлено: <a href="{% url 'contact' %}">Елена Мельник</a> {{ post.datetime }}</span>
+                        <span class="meta">Добавлено: <a href="{% url 'contact' %}">Елена Мельникова</a> {{ post.datetime }}</span>
                     </div>
                 </div>
             </div>
