--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Блог Елены Мельник</title>
+    <title>Блог Елены Мельниковой</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
@@ -80,9 +80,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="font: 'monotypecorsiva">Блог Елены Мельниковой</h1>
+                        <h1 style="font-family: annabelle">Блог Елены Мельниковой</h1>
                         <hr class="small">
-                        <span class="subheading" style="font: 'monotypecorsiva';" >Юридические услуги</span>
+                        <span class="subheading" style="font-family: annabelle">Юридические услуги</span>
                     </div>
                 </div>
             </div>
@@ -91,10 +91,10 @@
 {% endblock %}
 
 
-    <div class="container">
+    <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif;">
      {% block content %}Пустая страница{% endblock %}
     </div> <!-- container -->
-    <div class="container" style="font-family : sans-serif;">
+    <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif;">
     {% block additional %}{% endblock %}
     </div>
 
@@ -105,7 +105,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container" style="font-family : sans-serif;";">
+        <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif;">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
