--- a/templates/app/post_list.html
+++ b/templates/app/post_list.html
@@ -28,7 +28,7 @@
                    {% for post in object_list %}
                     <h2 class="post-title" style="font-family : 'Georgia', Times New Roman, Times, serif;"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
                     <h4 class="post-subtitle" style="font-family : 'Georgia', Times New Roman, Times, serif;">{{ post.subtitle }}</h4>
-                    <p class="post-meta">Добавлено: <a href="{%  url 'contact' %}">Елена Мельникова</a> {{ post.datetime }}</p>
+                    <p class="post-meta" style="font-size: 16px;">Добавлено: <a href="{%  url 'contact' %}">Елена Мельникова</a> {{ post.datetime }}</p>
                     {% empty %}
                     <p style="font-family : 'Georgia', Times New Roman, Times, serif;">Нет постов</p>
                     {% endfor %}
