--- a/templates/base.html
+++ b/templates/base.html
@@ -80,9 +80,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="font-family: annabelle">Блог Елены Мельниковой</h1>
+                        <h1 style="font-family: 'Georgia', Times New Roman, Times, serif; font-weight: normal;">Блог Елены Мельниковой</h1>
                         <hr class="small">
-                        <span class="subheading" style="font-family: annabelle">Юридические услуги</span>
+                        <span class="subheading" style="font-family: 'Georgia', Times New Roman, Times, serif;font-weight: normal;">Юридические услуги</span>
                     </div>
                 </div>
             </div>
