--- a/templates/app/category.html
+++ b/templates/app/category.html
@@ -1,5 +1,22 @@
 {% extends "base.html" %}
 
+{% block header %}
+    <!-- Page Header -->
+    <!-- Set your background image for this header on the line below. -->
+    <header class="intro-header" style="background-image: url('{{ STATIC_URL }}img/home-bg.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="site-heading">
+                        <h1 style="font-family: 'Lora', 'Times New Roman', serif">Блог Елены Мельниковой</h1>
+                        <hr class="small">
+                        <span class="subheading" style="font-family: 'Lora', 'Times New Roman', serif">Юридические услуги</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+{% endblock %}
 {% block title %}Статьи в категории - {{ category.name }}{% endblock title %}
 {% block content %}
 
