--- a/templates/app/contact.html
+++ b/templates/app/contact.html
@@ -8,9 +8,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="font-family: annabelle">Контакты</h1>
+                        <h1 style="font-family: 'Lora', 'Times New Roman', serif">Контакты</h1>
                         <hr class="small">
-                        <span class="subheading" style="font-family: annabelle">Как с нами связаться</span>
+                        <span class="subheading" style="font-family: 'Lora', 'Times New Roman', serif">Как с нами связаться</span>
                     </div>
                 </div>
             </div>
