--- a/templates/app/about.html
+++ b/templates/app/about.html
@@ -7,9 +7,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="font-family: annabelle">О нас</h1>
+                        <h1 style="font-family: 'Lora', 'Times New Roman', serif">О нас</h1>
                         <hr class="small">
-                        <span class="subheading" style="font-family: annabelle">Вот так и живем</span>
+                        <span class="subheading" style="font-family: 'Lora', 'Times New Roman', serif">Вот так и живем</span>
                     </div>
                 </div>
             </div>
