--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -20,16 +20,18 @@
 
 {% block content %}
     <!-- Post Content -->
-    <article>
+        <article>
         <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif; font-size: 18px; text-align: justify; text-indent: 1.5em;">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p>{{ post.content }}</p>
+                    <p>{{ post.content|safe|escape }}</p>
                 </div>
             </div>
         </div>
     </article>
+
     <hr>
+
 {% endblock %}
 
 
