--- a/templates/app/post_detail.html
+++ b/templates/app/post_detail.html
@@ -53,10 +53,10 @@
 {% endblock %}
 
 {% block comments %}
-  <div id="disqus_thread"></div>
+ <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'stamigosdjangohostname'; // required: replace example with your forum shortname
+        var disqus_shortname = 'meilawyer'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
@@ -66,5 +66,4 @@
         })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 {% endblock %}
