--- a/templates/app/about.html
+++ b/templates/app/about.html
@@ -18,14 +18,18 @@
 {% endblock %}
 
 {% block content %}
-    <!-- Main Content -->
-    <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif;">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Елена Мельник - юрист с большой буквы</p>
+        <!-- Post Content -->
+        <article>
+        <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif; font-size: 18px; text-align: justify; text-indent: 1.5em;">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <p>Наш приоритет – индивидуальный подход, который основывается на понимании истинных целей и потребностей каждого клиента и бизнеса. Мы работаем в тесном взаимодействии с клиентами и нацелены на долгосрочное сотрудничество.
+В своей работе мы руководствуемся следующей ценностной формулой: работать максимально результативно для клиента, эффективно для фирмы, ответственно для команды и общественности. Наша компания старается строить стабильные доверительные отношения, внимательно и своевременно реагируя на запросы клиента.</p>
+                </div>
             </div>
         </div>
-    </div>
+    </article>
 
     <hr>
+
 {% endblock %}
