--- a/templates/app/contact.html
+++ b/templates/app/contact.html
@@ -22,6 +22,11 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p>Напишите мне и я отвечу вам на протяжении 24 часов</p>
+                <p>Контактный телефон:
+(093) 680  89  73
+(099) 739  80  79
+
+Email: elena.melnikova@ukr.net </p>
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
                 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
                 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
